added otp service

--- a/TOTP/TOTP.Web/appsettings.json
+++ b/TOTP/TOTP.Web/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "OTPSettings": {
+    "TimeStep": 30,
+    "Tolerance": 3,
+    "DigitLength": 6 
+  },
   "AllowedHosts": "*"
 }
