--- a/TOTP/TOTP.Engine/TOTP.Engine.csproj
+++ b/TOTP/TOTP.Engine/TOTP.Engine.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TOTP.Common\TOTP.Common.csproj" />
+  </ItemGroup>
+
 </Project>
