--- a/TOTP/TOTP.Web/ClientApp/package.json
+++ b/TOTP/TOTP.Web/ClientApp/package.json
@@ -2,13 +2,18 @@
   "name": "totp.web",
   "version": "0.1.0",
   "private": true,
+  "resolutions": {
+    "@babel/preset-env": "7.5.5"
+  },
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "merge": "^1.2.1",
+    "moment": "^2.26.0",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-countdown-circle-timer": "^2.1.3",
+    "react-datetime-picker": "^3.0.2",
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
